<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_img_background"
    tools:context=".fragments.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:id="@+id/userTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:layout_weight="1"
                android:text="@string/india"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:scaleType="fitXY"
                android:src="@drawable/main_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAbleUserIV" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/map"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/map"
        android:src="@drawable/ic_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/map_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/manali"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/map"
        app:layout_constraintStart_toStartOf="@id/map"
        app:layout_constraintTop_toBottomOf="@id/map" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv"
        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_marginTop="48dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@id/map"
        app:layout_constraintStart_toStartOf="@id/map"
        app:layout_constraintTop_toBottomOf="@id/map_name"
        app:shapeAppearanceOverlay="@style/ShapeAbleIV"
        app:srcCompat="@drawable/solang_valley" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/map_name"
        app:layout_constraintStart_toStartOf="@id/map_name"
        app:layout_constraintEnd_toEndOf="@id/map_name"
        android:text="@string/slogan" />

    <Button
        android:id="@+id/explore_btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="517dp"
        android:background="@drawable/button_bg"
        android:text="@string/explore"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/map"
        app:layout_constraintStart_toStartOf="@id/map"
        app:layout_constraintTop_toBottomOf="@id/map" />
</androidx.constraintlayout.widget.ConstraintLayout>
